--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+#spring.data.mongodb.uri=${MONGODB_URI}
+spring.datasource.url=${MYSQLDB_URL}
+spring.datasource.username=${MYSQLDB_USERNAME}
+spring.datasource.password=${MYSQLDB_PASSWORD}
+#spring.jpa.show-sql=true
